tests/ui/lto/lto-and-no-bitcode-in-rlib.rs
//@ compile-flags: -C lto -C embed-bitcode=no

fn main() {}

//~? ERROR options `-C embed-bitcode=no` and `-C lto` are incompatible
